# Brakovka

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_brakovka.py
3D_model/: Сборка.a3d  Энкодер переход.FlatPrj  Энкодер_колесо.m3d  Энкодер_колесо.stl  Энкодер_корпус.m3d  Энкодер_корпус.stl  Энкодер_крышка.m3d  Энкодер_крышка.stl  колпак.m3d  колпак.stl
brakovka_hmi/: __init__.py  bridge.py  snapshot.py  sounds.py
brakovka_hmi/services/: __init__.py  poller.py
brakovka_hmi/ui/: __init__.py  form_guard.py  gui.py  main_window.py  osk.py  screen_journal.py  screen_main.py  screen_roll.py  screen_settings.py  screen_status.py  theme.py  trend_plot.py  virtual_keyboard.py  widgets.py
brakovka_pi/: __main__.py  as5600.py  brake_pwm.py  commands.py  config.py  controller.py  emulation.py  encoder.py  gpio_io.py  logutil.py  machine.py  modbus_rs485.py  opcua_srv.py  pid.py  pid_autotune.py  pid_tune.py  roll_geometry.py  setpoints.py  settings.json  settings.json.example  settings.py  state.py  vfd_io.py
deploy/: brakovka.desktop  brakovka.owle  brakovka.service  brk_globals.csv  check_gpio.sh  check_modbus.sh  check_modbus_raw.sh  check_uart_tx.sh  install_desktop_icon.sh  list_serial_ports.sh  owen_logic_pid_pi_ff_autotune.txt  owen_wiring.md  run_brakovka.sh
unit_tests/: __init__.py  test_clear_logs.py  test_encoder_fault_gate.py  test_machine.py  test_pid_autotune.py  test_pid_tune.py  test_speed_from_length.py  test_speed_moving_average.py  test_speed_outlier_reject.py  test_speed_window_median.py
(+13 files in other folders)
